--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,14 @@ jobs:
           command: |
             docker build . -t node_app
             echo 'bonjour'
+      - run:
+          name: Run tests
+          command: |
+            docker run -d -p 8080:8080 node_app
+            apk add curl
+            curl http://localhost:8080 
       #  - deploy:
       #     name: Push application Docker image
       #     command: |
+      #       docker tag node_app excoffit/node_app
+      #       docker push excoffit/node_app
