--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     working_directory: /app
     docker:
-      - image: docker
+      - image: node
     steps:
       - checkout
       - setup_remote_docker
@@ -17,7 +17,6 @@ jobs:
           name: Run tests
           command: |
             docker run -d -p 8080:8080 node_app
-            apk add curl
             curl http://localhost:8080 
       #  - deploy:
       #     name: Push application Docker image
