--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           name: Run tests
           command: |
             docker run -d -p 8080:8080 node_app
-            curl http://localhost:8080 
+            curl http://host.docker.internal:8080 
       #  - deploy:
       #     name: Push application Docker image
       #     command: |
