--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,11 +12,11 @@ jobs:
           command: |
             docker build . -t node_app
             echo 'bonjour'
-      # - run:
-      #     name: Run tests
-      #     command: |
-      #       docker run -d --network='host' -p 8080:8080 node_app
-      #       curl http://localhost:8080 
+      - run:
+          name: Run tests
+          command: |
+            docker run -d  -p 8080:8080 node_app
+            curl "http://localhost:8080" 
       - deploy:
           name: Push application Docker image
           command: |
