--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,8 @@ jobs:
     # docker:
     #   - image: circleci/node
     steps:
-      - checkout
-      - setup_remote_docker
+      # - checkout
+      # - setup_remote_docker
       - run:
           name: Build application Docker image
           command: |
