--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,10 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/node
+      - image: ubuntu-2004:202107-02
     steps:
       - checkout
-      - setup_remote_docker
+      # - setup_remote_docker
       - run:
           name: Build application Docker image
           command: |
@@ -17,7 +17,7 @@ jobs:
             docker run --name temp -d -p 8080:8080 node_app 
             docker inspect temp
             # sleep 5
-            curl "http://temp:8080" 
+            curl "http://localhost:8080" 
       - deploy:
           name: Push application Docker image
           command: |
