--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,8 @@ version: 2.1
 
 jobs:
   build:
-    docker:
-      - image: ubuntu-2004:202107-02
+    machine:
+      image: ubuntu-2004:202107-02
     steps:
       - checkout
       # - setup_remote_docker
