--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,13 +14,23 @@ jobs:
       - run:
           name: Run tests
           command: |
-            docker run --name temp -d -p 8080:8080 node_app 
-            docker inspect temp
-            # sleep 5
-            curl "http://localhost:8080" 
-      - deploy:
+            docker run --name temp -d -p 8888:8080 node_app 
+            sleep 10
+            curl "http://localhost:8888" 
+  publish:
+    machine:
+      image: ubuntu-2004:202107-02
+    steps:
+      - run:
           name: Push application Docker image
           command: |
             docker login -u $DOCKERHUB_ID -p $DOCKERHUB_PASSWORD
             docker tag node_app excoffit/node_app
             docker push excoffit/node_app
+workflows:
+  my-workflow:
+    jobs:
+      - build
+      - publish: 
+          requires:
+            - build
